--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	    <p> <a href="https://ide50-annastasis.legacy.cs50.io:8080/homepage/second.html "> The reasons </a>
 	</div>
 	<div class="sidebar">
-		Effects
-	</div>
+		<p> <a href="https://ide50-annastasis.legacy.cs50.io:8080/homepage/homepage/third.html"> Effects </a>
 	</div>
 
     </body>
