--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	</div>
 
 	<div class="content">
-	    <p> <a href="https://ide50-annastasis.legacy.cs50.io:8080/homepage/second.html "> The reasons </a>
+	    <p> <a href="homepage/second.html "> The reasons </a>
 	</div>
 	<div class="sidebar">
-		<p> <a href="https://ide50-annastasis.legacy.cs50.io:8080/homepage/homepage/third.html"> Effects </a>
+		<p> <a href="homepage/homepage/third.html"> Effects </a>
 	</div>
 
     </body>
