--- a/homepage/homepage/third.html
+++ b/homepage/homepage/third.html
@@ -7,7 +7,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <body background="https://imagesait.ru/photos/aHR0cDovL3JhbWtpLXZzZW0ucnUvZm9uL3Jvem92eWotZm9uMjkuanBn/nezhno-rozovyj-fon-dlya-fotoshopa.jpg">
+        <body background="http://imagesait.ru/photos/aHR0cDovL3JhbWtpLXZzZW0ucnUvZm9uL3Jvem92eWotZm9uMjkuanBn/nezhno-rozovyj-fon-dlya-fotoshopa.jpg">
         Good Effects For You
     </body>
 </html>
